---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case 1 {\n        -> -> 0\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:9
  │
4 │         -> -> 0
  │         ^^ I was not expecting this

Found "->", expected one of: 
"}"
a case clause
